# COCOHRIW_cell_control

./: LICENSE  README.md
cocohrip_control/: CMakeLists.txt  package.xml
cocohrip_control/launch/: bringup_all.launch.py  cocohrip_task_demo.launch.py  rsp.launch.py  start_robot_control.launch.py
cocohrip_control/urdf/: cocohrip_controlled.urdf.xacro
cocohrip_description/: CMakeLists.txt  package.xml
cocohrip_description/launch/: view_robot.launch.py
cocohrip_description/meshes/: collision_objects.xacro
cocohrip_description/rviz/: cocohrip_description.rviz
cocohrip_description/urdf/: cocohrip_cell.urdf.xacro  cocohrip_cell_macro.xacro
cocohrip_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml  setup_assistant
cocohrip_moveit_config/config/: cocohrip_cell.srdf  joint_limits.yaml
cocohrip_moveit_config/launch/: bringup_all.launch.py  move_group.launch.py  moveit_rviz.launch.py  setup_assistant.launch.py
manipulator_control/: CMakeLists.txt  package.xml
manipulator_control/action/: ExecuteTaskSequence.action  MoveToPose.action
manipulator_control/launch/: manipulator_control.launch.py
manipulator_control/msg/: TaskStep.msg
manipulator_control/src/: manipulator_control_node.cpp  task_sequence_client.cpp
robotiq_hande_ros2_driver/robotiq_hande_ros2_driver/: robotiq_gripper.py
